--- a/dashboard.html
+++ b/dashboard.html
@@ -88,7 +88,7 @@
                         <li><a href="dashboard.html">Dashboard</a></li>
                     </ul>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown left-side-bar-production">
                     <a href="javascript:" class="dropdown-toggle">
                         <span class="micon dw dw-edit2"></span><span class="mtext">Production</span>
                     </a>
@@ -96,17 +96,21 @@
                         <li><a href="dashboard_produksi.html">Production Dashboard</a></li>
                         <li><a href="form-produksi.html">Production Form</a></li>
                         <li><a href="form-corrugation.html">Corrugation Form</a></li>
-                        <li><a href="production-control.html">Production Control</a></li>
+                        <li class="left-side-bar-production-control">
+                            <a href="production-control.html">Production Control</a>
+                        </li>
                     </ul>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown left-side-bar-selling">
                     <a href="javascript:" class="dropdown-toggle">
                         <span class="micon dw dw-analytics-21"></span><span class="mtext">Selling</span>
                     </a>
                     <ul class="submenu">
                         <li><a href="dashboard_pemasaran.html">Selling Dashboard</a></li>
                         <li><a href="form-pemasaran.html">Selling Form</a></li>
-                        <li><a href="selling-control.html">Selling Control</a></li>
+                        <li class="left-side-bar-selling-control">
+                            <a href="selling-control.html">Selling Control</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -496,6 +500,7 @@
 <script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
 <script src="vendors/scripts/dashboard.js"></script>
 <script src="js/myjs/dashboard/dashboard.js"></script>
+<script src="js/myjs/login/auth-helper.js"></script>
 </body>
 
 </html>
