42nd Commit - Dashboard - % Chart
Completed:
1. Dashboard % Charts 1, 2, 3, 4 ready.

Pending:
1. Main Dashboard (Partial)
2. Warehouse
3. Print Btn. feature

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard_pemasaran.html
+++ b/dashboard_pemasaran.html
@@ -262,6 +262,7 @@
     <script src="js/myjs/api/api-helper.js"></script>
     <script src="js/myjs/chart/chart-utility-helper.js"></script>
     <script src="js/myjs/form/validation-helper.js"></script>
+    <script src="js/myjs/util/util-helper.js"></script>
 
     <script src="js/myjs/login/auth-helper.js"></script>
     <script> updateLeftSideBar();</script>
