--- a/dashboard.html
+++ b/dashboard.html
@@ -151,10 +151,10 @@
                 <div class="card-box height-100-p widget-style1">
                     <div class="d-flex flex-wrap align-items-center">
                         <div class="progress-data">
-                            <div id="chart"></div>
+                            <div id="chart1"></div>
                         </div>
                         <div class="widget-data">
-                            <div class="h4 mb-0">February 2021</div>
+                            <div class="h4 mb-0 full-month-year">Month Year</div>
                             <div class="weight-600 font-14">Production</div>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                             <div id="chart2"></div>
                         </div>
                         <div class="widget-data">
-                            <div class="h4 mb-0">February 2021</div>
+                            <div class="h4 mb-0 full-month-year">Month Year</div>
                             <div class="weight-600 font-14">Selling</div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                             <div id="chart3"></div>
                         </div>
                         <div class="widget-data">
-                            <div class="h4 mb-0">2021</div>
+                            <div class="h4 mb-0 current-year">2021</div>
                             <div class="weight-600 font-14">Production</div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             <div id="chart4"></div>
                         </div>
                         <div class="widget-data">
-                            <div class="h4 mb-0">2021</div>
+                            <div class="h4 mb-0 current-year">2021</div>
                             <div class="weight-600 font-14">Selling</div>
                         </div>
                     </div>
@@ -498,9 +498,11 @@
 <script src="src/plugins/datatables/js/dataTables.bootstrap4.min.js"></script>
 <script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
 <script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
-<script src="vendors/scripts/dashboard.js"></script>
+<!--<script src="vendors/scripts/dashboard.js"></script>-->
+<script src="js/myjs/api/api-helper.js"></script>
 <script src="js/myjs/dashboard/dashboard.js"></script>
 <script src="js/myjs/login/auth-helper.js"></script>
+<script src="js/myjs/util/util-helper.js"></script>
 </body>
 
 </html>
