--- a/dashboard_gudang.html
+++ b/dashboard_gudang.html
@@ -189,14 +189,17 @@
 <script src="src/plugins/datatables/js/dataTables.bootstrap4.min.js"></script>
 <script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
 <script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
-<script src="vendors/scripts/apexcharts3-setting.js"></script>
+<!--<script src="vendors/scripts/apexcharts3-setting.js"></script>-->
 <script src="src/plugins/jQuery-Knob-master/jquery.knob.min.js"></script>
 <script src="vendors/scripts/knob-chart-setting.js"></script>
 <script src="src/plugins/highcharts-6.0.7/code/highcharts.js"></script>
 <script src="https://code.highcharts.com/highcharts-3d.js"></script>
 <script src="src/plugins/highcharts-6.0.7/code/highcharts-more.js"></script>
-<script src="vendors/scripts/highchart3-setting.js"></script>
+<!--<script src="vendors/scripts/highchart3-setting.js"></script>-->
 
+<script src="js/myjs/dashboard/warehouse-dashboard.js"></script>
+<script src="js/myjs/api/api-helper.js"></script>
+<script src="js/myjs/util/util-helper.js"></script>
 <script src="js/myjs/login/auth-helper.js"></script>
 <script> updateLeftSideBar();</script>
 
